Editing, listing and deleting attendance routes
